feat: merged with develop and implemented single entity call
